# help-desk-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
.chainlit/: config.toml
src/chat/: app.py  service.py
src/chat/dao/database/: env.py
src/chat/dao/database/models/: __init__.py  base_model.py  message_model.py  session_model.py
src/chat/dao/database/versions/: 2025_08_12_1322-86cbf349c05a_initial_migration.py
src/chat/dao/message_history/: session_dao.py
src/chat/dao/vector_stores/: __init__.py  base_vector_store.py  base_vector_store_dao.py  qdrant_vector_store.py  qdrant_vector_store_dao.py
src/chat/dto/: __init__.py  domain.py
src/config/: __init__.py  base_config.py  chat_config.py  db_config.py  embedding_config.py  knowledge_base_config.py  logging_config.py  model_config.py  ollama_config.py  qdrant_config.py  tracer_config.py
