[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "help-desk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "arize-phoenix>=11.21.0",
    "chainlit>=2.6.8",
    "docx2txt>=0.9",
    "fastapi>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "langchain-ollama>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "ollama>=0.5.3",
    "openinference-instrumentation-langchain>=0.1.50",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.1",
    "sqlalchemy>=2.0.42",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "tqdm>=4.67.1",
]
